# geminidesk-tauri

./: .gitignore  LICENSE  README.md  TAURI_CONVERSION.md  context-menu.css  dev-app-update.yml  index.html  installer.nsh  main.js  package-lock.json  package.json  preload.js  translations.js
.github/workflows/: build.yml
0.5.8_0/: background.js  codemirror-accessor.js  dragDropListener.js  json_function_call_extractor.js  manifest.json
0.5.8_0/_locales/en/: messages.json
0.5.8_0/_locales/ko/: messages.json
0.5.8_0/content/: index.css  index.iife.js
html/: confirm-reset.html  deep-research-schedule.html  download-progress.html  drag.html  export-format-choice.html  index.html  install-update-confirm.html  mcp-setup.html  notification.html  onboarding.html  page.html  pdf-direction-choice.html  personal-message.html  prompt-manager.html  settings.html  share-ideas.html  update-available.html
modules/: ProfileManager.js  accounts.js  constants.js  deep-research.js  settings.js  tray.js  utils.js
src-tauri/: .tauriignore  Cargo.toml  tauri.conf.json
src-tauri/src/: choice.html  drag.html  export-format-choice.html  init.js  inject.js  lib.rs  main.rs  pdf-direction-choice.html  share-ideas.html
test/modules/: ProfileManager.test.js
