[package]
name = "gemini-desk"
version = "0.1.0"
edition = "2021"
authors = ["Hillel BH <geminidesksupport@proton.me>"]
description = "GeminiDesk Tauri shell"

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
